// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormBuilder FieldInterval component FormBuilder FieldInterval  with empty value 1`] = `
<FormItem
  className="field-interval"
  label="label"
  name="name"
  rules={
    Array [
      Object {
        "from": "2020-01-04T00:00:00.000Z",
        "to": "2020-01-04T00:00:00.000Z",
      },
      Object {
        "validator": [Function],
      },
    ]
  }
>
  <Interval
    format="{YYYY} MM-DDTHH:mm:ss SSS [Z] A"
    maxDate={"2020-03-06T00:00:00.000Z"}
    minDate={"2020-03-04T00:00:00.000Z"}
    onChange={[Function]}
  />
</FormItem>
`;

exports[`FormBuilder FieldInterval component FormBuilder FieldInterval rendered correctly  without rules 1`] = `
<FormItem
  className="field-interval"
  label="label"
  name="name"
  rules={
    Array [
      Object {
        "validator": [Function],
      },
    ]
  }
>
  <Interval
    format="{YYYY} MM-DDTHH:mm:ss SSS [Z] A"
    maxDate={"2020-03-06T00:00:00.000Z"}
    minDate={"2020-03-04T00:00:00.000Z"}
    onChange={[Function]}
  />
</FormItem>
`;

exports[`FormBuilder FieldInterval component FormBuilder FieldInterval rendered correctly 1`] = `
<FormItem
  className="field-interval"
  label="label"
  name="name"
  rules={
    Array [
      Object {
        "from": "2020-01-04T00:00:00.000Z",
        "to": "2020-01-04T00:00:00.000Z",
      },
      Object {
        "validator": [Function],
      },
    ]
  }
>
  <Interval
    format="{YYYY} MM-DDTHH:mm:ss SSS [Z] A"
    maxDate={"2020-03-06T00:00:00.000Z"}
    minDate={"2020-03-04T00:00:00.000Z"}
    onChange={[Function]}
  />
</FormItem>
`;
